# Chat-plus-plus

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  bugs.txt  notes.txt
.github/workflows/: deploy-apps.yml
apps/client/: CMakeLists.txt
apps/client/src/: main.cpp
apps/client/src/client/: client.cpp  client.h  main.cpp  ui.cpp  ui.h
apps/server/: CMakeLists.txt
apps/server/src/: main.cpp
apps/server/src/server/: main.cpp  plugin.cpp  plugin.h  server.cpp  server.h
libs/common_lib/: CMakeLists.txt
libs/json_struct/: CMakeLists.txt
libs/nlohmann/: CMakeLists.txt
